# XCyber360

./: .clang-format  .clang-tidy  .gitignore  CONTRIBUTING.md  INSTALL  README.md  TODO.md  gen_ossec.sh  install.sh  upgrade.sh
.github/: .goss.yaml  multi-node-filebeat-check.sh  multi-node-log-check.sh  single-node-filebeat-check.sh  single-node-log-check.sh
.github/ISSUE_TEMPLATE/: new_release.md
.github/workflows/: Procedure_push_docker_images.yml  build.yml  builder_OVA.yaml  chef-manager-agent.yml  ci-chef.yml  cypress-basic.yml  dev-environment.yml  packages_builder_ami.yaml  playground.yml  push.yml  trivy-dashboard.yml  trivy-indexer.yml  trivy-manager.yml  unit_tests.yaml  xcyber360-build-push-docker-action.yml
ansible/: .gitignore
api/: Makefile  setup.py
api/api/: __init__.py  alogging.py  api_exception.py  authentication.py  configuration.py  constants.py  encoder.py  error_handler.py  middlewares.py  signals.py  uri_parser.py  util.py  validator.py
api/comms/: setup.py
api/core/: Makefile
chef/: Berksfile  README.md  TESTING.md  kitchen.dokken.yml  kitchen.yml  metadata.rb
etc/: local_decoder.xml  local_rules.xml  ossec-agent.conf  preloaded-vars.conf  xcyber360-server.yml
framework/: .gitignore  Makefile  setup.py
ruleset/: README.md
src/: Doxyfile  Makefile
src/engine/test/engine-test-utils/: pyproject.toml
src/engine/test/integration_tests/engine-it/: pyproject.toml
src/engine/test/integration_tests/engine-it/src/integration_test/: initial_state.py  integration_test.py
tools/: bump_version.sh
wodles/: .gitignore  utils.py
(+3727 files in other folders)
