[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "engine-it"
version = "0.0.1"
authors = [{ name = "Xcyber360, Inc." }]
description = "Integration tests for Xcyber360 Engine"
readme = "README.md"
requires-python = ">=3.8"
classifiers = ["Programming Language :: Python :: 3"]

dependencies = ["api-communication", "toml", "engine-test-utils", "behave"]

# [project.urls]
# Homepage = ""

[project.scripts]
engine-it = "integration_test.__main__:main"
